# shelf-sage

./: README.md  pyproject.toml
api/: main.py
api/models/: category_based.pkl
data/processed/: books_clean.csv
data/raw/: books.csv
frontend/: package-lock.json
frontend/src/: app.css
frontend/src/lib/: api.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/books/[slug]/: +page.js  +page.svelte
frontend/src/routes/categories/: +page.svelte
frontend/src/routes/search/: +page.svelte
models/: category_based.pkl
notebooks/: 01_scraping_demo.ipynb  eda.ipynb
src/data_processing/: data_processing.py
src/models/: __init__.py  category_based.py  content_based.py  recommender.py
src/scraping/: scrape_book.py
